# ControlVP

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
data/: data_20250121_184745_edge.npz  data_20250122_184432_edge.npz  data_20250122_191321_edge.npz  data_20250123_135440_edge.npz  data_20250129_170013_edge.npz  data_20250129_175754_edge.npz  data_20250129_181215_edge.npz  data_20250129_181444_edge.npz  data_20250130_180427_edge.npz  data_20250130_182025_edge.npz  data_20250130_212334_edge.npz  data_20250130_212401_edge.npz  data_20250130_223144_edge.npz  data_20250324_042618_edge.npz  data_20250324_054933_edge.npz  data_20250328_192600_edge.npz
dataset_for_inference/: data_20250429_191015_-130_375_depth.npy  data_20250430_132905_191_392_depth.npy  data_20250430_144553_575_281_depth.npy  data_20250430_144553_575_281_edge.npz  data_20250503_162558_617_396_depth.npy  data_20250503_163839_510_355_edge.npz  data_20250503_164410_-72_360_edge.npz  data_20250503_164847_124_271_edge.npz  data_20250503_165515_364_324_depth.npy  data_20250503_165515_364_324_edge.npz  data_20250503_170712_265_345_edge.npz  data_20250503_220808_151_390_depth.npy  data_20250503_220808_151_390_edge.npz  data_20250503_221220_189_380_depth.npy  data_20250503_221336_251_286_depth.npy  data_20250503_221336_251_286_edge.npz  data_20250503_224525_9_259_edge.npz  data_20250503_224842_324_398_edge.npz  data_20250503_225059_325_317_depth.npy  data_20250503_225059_325_317_edge.npz  data_20250503_225222_230_263_edge.npz  data_20250503_225353_-1_218_depth.npy  data_20250503_225353_-1_218_edge.npz  data_20250503_231802_403_433_depth.npy  data_20250503_232210_299_326_depth.npy  data_20250503_232416_138_219_edge.npz  data_20250503_233833_71_325_depth.npy  data_20250503_233833_71_325_edge.npz  data_20250503_234251_316_219_depth.npy  data_20250503_234251_316_219_edge.npz  data_20250503_234549_560_383_depth.npy  data_20250503_235239_176_343_depth.npy  data_20250503_235352_233_324_edge.npz  data_20250504_000029_237_375_depth.npy  data_20250504_000412_263_247_edge.npz  data_20250504_000750_355_283_depth.npy  data_20250504_000950_304_279_edge.npz  data_20250504_001144_-309_342_edge.npz  data_20250504_001347_131_243_depth.npy  data_20250504_001347_131_243_edge.npz  (+241 more)
dataset_for_inference_flux/: data_20250915_104651_34_323_edge.npz  data_20250915_142011_254_463_edge.npz  data_20250915_143754_271_346_edge.npz  data_20250915_144454_247_454_depth.npy  data_20250915_144454_247_454_edge.npz  data_20250915_145009_40_366_depth.npy  data_20250915_153205_80_338_depth.npy  data_20250915_153322_93_434_depth.npy  data_20250915_154239_35_282_depth.npy  data_20250915_154239_35_282_edge.npz  data_20250915_160646_181_380_edge.npz  data_20250915_161243_402_434_depth.npy  data_20250915_161243_402_434_edge.npz  data_20250915_161425_262_302_depth.npy  data_20250915_161425_262_302_edge.npz  data_20250915_161851_233_354_edge.npz  data_20250915_162321_280_404_depth.npy  data_20250915_170830_-77_444_depth.npy  data_20250915_170830_-77_444_edge.npz  (+42 more)
(+474 files in other folders)
